--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,26 +8,17 @@ workflows:
               only: /.*/
       - test-python-install:
           version: "3.4"
-          requires:
-            - build
-      - test-python-install:
-          version: "3.5"
-          requires:
-            - build
-      - test-python-install:
-          version: "3.6"
-          requires:
-            - build
-      - test-python-install:
-          version: "3.7"
+          filters:
+            tags:
+              only: /.*/
           requires:
             - build
       - deploy:
           requires:
-            - build
+            - test-python-install
           filters:
             tags:
-              only: /[0-9]+(\.[0-9]+)*/
+              only: /.*/
             branches:
               ignore: /.*/
 jobs:
@@ -48,12 +39,6 @@ jobs:
           key: v1-dependency-cache-{{ checksum "setup.py" }}-{{ checksum "Makefile" }}
           paths:
             - "venv"
-      - run:
-          name: run tests
-          command: |
-            . venv/bin/activate
-            make test
-            codecov
       - store_artifacts:
           path: htmlcov/
   test-python-install:
@@ -77,12 +62,6 @@ jobs:
           key: v1-dependency-cache-{{ checksum "setup.py" }}-{{ checksum "Makefile" }}
           paths:
             - "venv"
-      - run:
-          name: run tests
-          command: |
-            . venv/bin/activate
-            make test
-            codecov
       - store_artifacts:
           path: htmlcov/
       - run:
@@ -106,6 +85,7 @@ jobs:
       - run:
           name: install python dependencies
           command: |
+            python3 -m pip install --upgrade twine
             python3 -m venv venv
             . venv/bin/activate
             make dev
@@ -123,8 +103,8 @@ jobs:
           name: init .pypirc
           command: |
             echo -e "[pypi]" >> ~/.pypirc
-            echo -e "username = levlaz" >> ~/.pypirc
-            echo -e "password = pypi-AgENdGVzdC5weXBpLm9yZwIkOWU0Yzc4MTItNjIxOS00MGE3LThiZDktN2JhOGJmMDUxOTdhAAIleyJwZXJtaXNzaW9ucyI6ICJ1c2VyIiwgInZlcnNpb24iOiAxfQAABiBuTmdnl7ud93YKSi6ITkEdOZLZ9HGJPRKQ0Bi8IgKEQw" >> ~/.pypirc
+            echo -e "username = __token__" >> ~/.pypirc
+            echo -e "password = $PYPI_PASSWORD" >> ~/.pypirc
       - run:
           name: create packages
           command: |
@@ -133,4 +113,4 @@ jobs:
           name: upload to pypi
           command: |
             . venv/bin/activate
-            twine upload --repository-url https://test.pypi.org/legacy/ dist/*
+            twine upload dist/*
