update read me file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,24 +10,12 @@ workflows:
           version: "3.4"
           requires:
             - build
-      - test-python-install:
-          version: "3.5"
-          requires:
-            - build
-      - test-python-install:
-          version: "3.6"
-          requires:
-            - build
-      - test-python-install:
-          version: "3.7"
-          requires:
-            - build
       - deploy:
           requires:
             - build
           filters:
             tags:
-              only: /[0-9]+(\.[0-9]+)*/
+              only: /.*/
             branches:
               ignore: /.*/
 jobs:
@@ -48,12 +36,6 @@ jobs:
           key: v1-dependency-cache-{{ checksum "setup.py" }}-{{ checksum "Makefile" }}
           paths:
             - "venv"
-      - run:
-          name: run tests
-          command: |
-            . venv/bin/activate
-            make test
-            codecov
       - store_artifacts:
           path: htmlcov/
   test-python-install:
@@ -77,12 +59,6 @@ jobs:
           key: v1-dependency-cache-{{ checksum "setup.py" }}-{{ checksum "Makefile" }}
           paths:
             - "venv"
-      - run:
-          name: run tests
-          command: |
-            . venv/bin/activate
-            make test
-            codecov
       - store_artifacts:
           path: htmlcov/
       - run:
@@ -124,7 +100,7 @@ jobs:
           command: |
             echo -e "[pypi]" >> ~/.pypirc
             echo -e "username = levlaz" >> ~/.pypirc
-            echo -e "password = pypi-AgENdGVzdC5weXBpLm9yZwIkOWU0Yzc4MTItNjIxOS00MGE3LThiZDktN2JhOGJmMDUxOTdhAAIleyJwZXJtaXNzaW9ucyI6ICJ1c2VyIiwgInZlcnNpb24iOiAxfQAABiBuTmdnl7ud93YKSi6ITkEdOZLZ9HGJPRKQ0Bi8IgKEQw" >> ~/.pypirc
+            echo -e "password = $PYPI_PASSWORD" >> ~/.pypirc
       - run:
           name: create packages
           command: |
@@ -133,4 +109,4 @@ jobs:
           name: upload to pypi
           command: |
             . venv/bin/activate
-            twine upload --repository-url https://test.pypi.org/legacy/ dist/*
+            twine upload dist/*
