--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,136 +1,21 @@
 version: 2.1
-workflows:
-  build_and_deploy:
-    jobs:
-      - build:
-          filters:
-            tags:
-              only: /.*/
-      - test-python-install:
-          version: "3.4"
-          requires:
-            - build
-      - test-python-install:
-          version: "3.5"
-          requires:
-            - build
-      - test-python-install:
-          version: "3.6"
-          requires:
-            - build
-      - test-python-install:
-          version: "3.7"
-          requires:
-            - build
-      - deploy:
-          requires:
-            - build
-          filters:
-            tags:
-              only: /[0-9]+(\.[0-9]+)*/
-            branches:
-              ignore: /.*/
+
+orbs:
+  python: circleci/python@0.2.1
+
 jobs:
-  build:
-    docker:
-      - image: circleci/python:3.6
+  build-and-test:
+    executor: python/default
     steps:
       - checkout
-      - restore_cache:
-          key: v1-dependency-cache-{{ checksum "setup.py" }}-{{ checksum "Makefile" }}
+      - python/load-cache
+      - python/install-deps
+      - python/save-cache
       - run:
-          name: install python dependencies
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            make dev
-      - save_cache:
-          key: v1-dependency-cache-{{ checksum "setup.py" }}-{{ checksum "Makefile" }}
-          paths:
-            - "venv"
-      - run:
-          name: run tests
-          command: |
-            . venv/bin/activate
-            make test
-            codecov
-      - store_artifacts:
-          path: htmlcov/
-  test-python-install:
-    parameters:
-      version:
-        type: string
-        default: latest
-    docker:
-      - image: circleci/python:<< parameters.version >>
-    steps:
-      - checkout
-      - restore_cache:
-          key: v1-dependency-cache-{{ checksum "setup.py" }}-{{ checksum "Makefile" }}
-      - run:
-          name: install python dependencies
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            make dev
-      - save_cache:
-          key: v1-dependency-cache-{{ checksum "setup.py" }}-{{ checksum "Makefile" }}
-          paths:
-            - "venv"
-      - run:
-          name: run tests
-          command: |
-            . venv/bin/activate
-            make test
-            codecov
-      - store_artifacts:
-          path: htmlcov/
-      - run:
-          name: Smoke Test Install
-          command: |
-            python --version
-            sudo pip3 install circleci
-  integration:
-    docker:
-      - image: circleci/python:3.6
-    steps:
-      - run: echo "It works!"
-      - run: echo $RUN_EXTRA_TESTS
-  deploy:
-    docker:
-      - image: circleci/python:3.6
-    steps:
-      - checkout
-      - restore_cache:
-          key: v1-dependency-cache-{{ checksum "setup.py" }}-{{ checksum "Makefile" }}
-      - run:
-          name: install python dependencies
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            make dev
-      - save_cache:
-          key: v1-dependency-cache-{{ checksum "setup.py" }}-{{ checksum "Makefile" }}
-          paths:
-            - "venv"
-      - run:
-          name: verify git tag vs. version
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            python setup.py verify
-      - run:
-          name: init .pypirc
-          command: |
-            echo -e "[pypi]" >> ~/.pypirc
-            echo -e "username = levlaz" >> ~/.pypirc
-            echo -e "password = pypi-AgENdGVzdC5weXBpLm9yZwIkOWU0Yzc4MTItNjIxOS00MGE3LThiZDktN2JhOGJmMDUxOTdhAAIleyJwZXJtaXNzaW9ucyI6ICJ1c2VyIiwgInZlcnNpb24iOiAxfQAABiBuTmdnl7ud93YKSi6ITkEdOZLZ9HGJPRKQ0Bi8IgKEQw" >> ~/.pypirc
-      - run:
-          name: create packages
-          command: |
-            make package
-      - run:
-          name: upload to pypi
-          command: |
-            . venv/bin/activate
-            twine upload --repository-url https://test.pypi.org/legacy/ dist/*
+          command: ./manage.py test
+          name: Test
+
+workflows:
+  main:
+    jobs:
+      - build-and-test
