--- a/setup.cfg
+++ b/setup.cfg
@@ -8,3 +8,8 @@ force_single_line=True
 known_django=django
 sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 no_lines_before=LOCALFOLDER
+
+[flake8]
+exclude = */migrations/*,*/node_modules/*,.git,native_shortuuid/__init__.py
+ignore = W504,W601
+max-line-length = 127
