--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 include LICENSE
 include README.md
-recursive-include django-nativeshortuuidfield *.py
+recursive-include native_shortuuid *.html
+recursive-include native_shortuuid *.py
